--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+<head> 
 <meta charset="UTF-8">
-<title>Page Title</title>
+
+<title>Homepage</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
-<!--- Code above this line will not be displayed on the browser -->
+<link rel="stylesheet" href="LIS.css">
+</head>
 <body>
-<p> Hello world! </p>
-<p> My name is Sally </p>
+	 <header>
+        <h1>Welcome to My Website</h1>
+        <nav>
+        	 <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="wellness.html">Wellness</a></li>
+                <li><a href="family.html">Family</a></li>
+                <li><a href="LA.html">Los Angeles</a></li>
+              </ul>
+          
+        </nav>
+    </header>
+	<h2> My name is Sally</h2>
+	<h3> Come along on my journey </h3>
+<p> I will be showcasing the things that mean most to me, including my family, my home, and wellness practices that I've incorporated into my daily life </p>
+
+ <footer>
+        <p>&copy; 2024 My Website</p>
+    </footer>
 </body>
 </html>
