--- a/wellness.html
+++ b/wellness.html
@@ -26,10 +26,10 @@
     </main>
     <dl>
         <dt>Meditation</dt>
-        <dd>Meditation is a practice where an person employs the technique of focusing the mind on a particular object, thought, or activity. It can also include focusing on absolutely nothing but the darkness we see when we close our eyes or the number of breaths we are taking each minute. This can train our attention and awareness, and achieve a mentally clear and emotionally calm and stable state.</dd>
+        <dd>Meditation is a practice where an person utilizes a technique of focusing the mind on a particular object, thought, or activity. It can also include focusing on absolutely nothing but the darkness we see when we close our eyes or the number of breaths we are taking each minute. This can train our attention and awareness, and achieve a mentally clear and emotionally tranquil state.</dd>
         
         <dt>Exercise</dt>
-        <dd>Exercise is an activity that enhances or maintains physical fitness and overall health. It is performed for various reasons, including increasing strength, building muscles, improving cardiovascular health, enhancing flexibility, and reducing stress. Studies say that just 15 minutes of exercise each day can improve the human body's physical and mental state.</dd>
+        <dd>Exercise is an activity that promotes physical fitness and overall health. It is performed for various reasons, including increasing strength, improving bodily health, promoting flexibility, and decreasing anxiety. Studies say that just 15 minutes of exercise each day can improve the human body's physical and mental state.</dd>
         
         <dt>Yoga</dt>
         <dd>Yoga is a practice of physical, mental, and spiritual techniques which began from the religion of Bhuddism in ancient India. It includes various positions, breathing rorutines, and meditation techniques. Yoga is a great practice to promote health and relaxation. I like to do my yoga routine each night before bed as it lowers my heart rate, stretches our my sore muscles from the long day, and relaxes my mind before drifting into a peaceful state of sleep. </dd>
